youtube video change

--- a/index.html
+++ b/index.html
@@ -345,18 +345,18 @@
 
         <div class="w3-cell card-contenido mobile-padding-0">
           <div
-            class="w3-card w3-white w3-leftbar w3-border-theme w3-hover-shadow"
+            class="w3-card w3-white w3-leftbar w3-border-theme w3-hover-shadow new-video-card-container"
           >
             <div class="w3-container">
               <h6 class="w3-text-theme">CICLO LECTIVO 2022</h6>
             </div>
-            <div class="w3-container w3-padding-16">
-              <a href="https://www.youtube.com/embed/zexJlch7I3k" target="_new">
-                <img
-                  src="https://miel.unlam.edu.ar/vista/imagenes/home/placa_ciclo_academico.jpg"
-                  width="100%"
-                  alt=""
-              /></a>
+            <div class="w3-container w3-padding-16 new-video-card">
+              <iframe
+                width="100%"
+                height="100%"
+                src="https://www.youtube.com/embed/zexJlch7I3k"
+              >
+              </iframe>
             </div>
           </div>
         </div>
